# Networkii

./: .gitignore  README.md  cli.py  config.py  configure_usb_network.sh  install_networkii.sh  main.py  networkii  pyproject.toml  requirements-pi.txt  requirements.txt  setup.py  test_display.py  webapp.py
assets/: styles.css
networkii/: config.py
networkii/cli/: networkii.py
networkii/models/: network_stats.py
networkii/screens/: __init__.py  base_screen.py  basic_stats_screen.py  detailed_stats_screen.py
networkii/services/: display.py  screen_manager.py
networkii/utils/: config_manager.py  metrics.py  network.py
scripts/: force_ics.sh  install_networkii.sh  install_service.sh  setup_usb0.sh
src/: cli.py  config.py
src/cli/: __init__.py  networkii
src/models/: network_stats.py
src/networkii/: config.py
src/networkii/cli/: networkii  networkii.py
src/networkii/screens/: base_screen.py  basic_stats_screen.py  detailed_stats_screen.py  home_screen.py  no_internet_screen.py  setup_screen.py
src/networkii/services/: ap_server.py  button_handler.py  display.py  network_manager.py  screen_manager.py
src/networkii/utils/: config_manager.py  logger.py  network.py
src/services/: ap_server.py  button_handler.py  config_server.py  display.py  monitor.py  network_manager.py
src/utils/: config_manager.py  interface.py  logger.py  metrics.py
templates/: settings.html
